[tool.poetry]
name = "mdx"
version = "0.1.0"
description = "Seemless markdown to docx converter."
authors = ["Owen Griffiths <root@ogriffiths.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
